Bug 247600 - Text in normal horizontal direction is displaying in cross direction
Summary: Text in normal horizontal direction is displaying in cross direction
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/ppt (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-13 06:14 UTC by swathi
Modified: 2011-09-02 11:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the document in Kpresenter(In revision 1161892) (742.03 KB, image/x-png)
2010-08-13 06:16 UTC, swathi
Details
Screenshot in MS Ppt -2003 (745.06 KB, image/x-png)
2010-08-13 08:59 UTC, swathi
Details
Test data (971.50 KB, application/vnd.ms-powerpoint)
2011-04-14 19:00 UTC, swathi
Details
Another test data with the same issue (19.00 KB, application/vnd.ms-powerpoint)
2011-04-20 09:22 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2010-08-13 06:14:38 UTC
Version:           svn (Rev: 1161892) (using KDE 4.4.3) 
OS:                Kubuntu 9.10

Test data to reproduce the issue is 
http://agecon.okstate.edu/grad/international_dinner_2006/India.ppt

In 6th slide,text on the pictures is displaying in cross direction.

Expected outcome:
Kpresenter should be able to display the text on the pictures in normal direction.
Comment 1 swathi 2010-08-13 06:16:37 UTC
Created attachment 50097 [details]
Screenshot of the document in Kpresenter(In revision 1161892)
Comment 2 swathi 2010-08-13 08:59:25 UTC
Created attachment 50104 [details]
Screenshot in MS Ppt -2003
Comment 3 swathi 2010-08-16 08:18:33 UTC
Converted the test document to a .odp file using koconverter.
OOImpress loads the document in the same way as Kpresenter(In 6th slide text is displaying in cross direction).

Guessing it to be a filter problem.
Comment 4 Camilla Boemann 2011-04-08 16:05:08 UTC
I'm sure the developers would appreciate a test file
Comment 5 swathi 2011-04-14 19:00:20 UTC
Created attachment 58981 [details]
Test data
Comment 6 swathi 2011-04-20 09:22:08 UTC
Created attachment 59150 [details]
Another test data with the same issue 

In the attached test data,text in horizontal direction is not displaying.
Comment 7 Matus Uzak 2011-07-29 09:27:31 UTC
Filter issue, the text-box rotation is not correct.
Comment 8 Matus Uzak 2011-08-02 18:11:50 UTC
Attachment (id=59150) contains word art, that's not supported at the moment and reported as a separate bug.
Comment 9 Matus Uzak 2011-08-02 18:14:32 UTC
Git commit 5ed56bdb31ace034bf83cdf8319e8d2f033ea6c2 by Matus Uzak.
Committed on 02/08/2011 at 19:58.
Pushed by uzak into branch 'master'.

libmso: Added a separate custom-shape of type rectangle.

* The separate rectangle shape was required to make use of draw:mirror-vertical
  and draw:mirror-horizontal, which are usable only with the draw:enhanced-geometry
  element.

* The existence of placeholder shapes in MS-PPT requires some rectangles
  to be processed as text-boxes to make use of the presentation:placeholder
  attribute.

BUG:247600

M  +8    -0    filters/libmso/ODrawToOdf.h
M  +1    -0    filters/words/msword-odf/graphicshandler.h
M  +18   -7    filters/libmso/shapes.cpp
M  +11   -0    filters/kpresenter/powerpoint/PptToOdp.cpp
M  +6    -0    filters/tables/excel/import/ODrawClient.cpp
M  +1    -0    filters/tables/excel/import/ODrawClient.h
M  +7    -0    filters/words/msword-odf/drawclient.cpp

http://commits.kde.org/calligra/5ed56bdb31ace034bf83cdf8319e8d2f033ea6c2
Comment 10 Matus Uzak 2011-08-17 08:54:48 UTC
*** Bug 277282 has been marked as a duplicate of this bug. ***
Comment 11 swathi 2011-09-02 11:48:05 UTC
Verified in  dd267fba75fccccf66e6d485dbada7cea5301d0f.