libmso: Added a separate custom-shape of type rectangle.

* The separate rectangle shape was required to make use of draw:mirror-vertical
  and draw:mirror-horizontal, which are usable only with the draw:enhanced-geometry
  element.

* The existence of placeholder shapes in MS-PPT requires some rectangles
  to be processed as text-boxes to make use of the presentation:placeholder
  attribute.

BUG:247600